2007-08-03  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #451599

	* e-attachment.c: (async_progress_update_cb): Timing of setting the
	attachment is downloaded has to be after creating the attachment.

2007-08-03  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #331729

	* e-selection-model.c: (move_selection): Don't call
	e_sorter_model_to_sorted when there is no selected row.

2007-07-27  Matthew Barnes  <mbarnes@redhat.com>

	* Makefile.am:
	Rename EXTRA_GNOME_CFLAGS to GNOME_PLATFORM_CFLAGS.
	Similarly for EXTRA_GNOME_LIBS.

2007-07-09  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #387844
	* e-dateedit.c: Increase the buffer size.

	Committing on behalf of Makuchaku <mayank.gnu@gmail.com>
	
2007-06-18  Srinivasa Ragavan  <sragavan@novell.com>
	
        ** Fix for bug #448223 from Gilles Dartiguelongue

	* e-search-bar.c: (set_option), (e_search_bar_set_viewoption),
	(e_search_bar_set_scopeoption):

2007-06-15  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #257118

	* e-search-bar.c: (set_clear_menuitem_sensitive),
	(clear_button_state_changed): Added two helper functions.
	* e-search-bar.c: (setup_standard_verbs), (setup_bonobo_menus):
	Using these helper functions, clear menu item is synchronized
	by changed state of clear_button of search bar.

2007-06-15  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #263207

	* e-filter-bar.c: (dialog_rule_changed): New callback
	for disabling OK button in dialog when rule isn't valid.
	* e-filter-bar.c: (do_advanced), (save_search_dialog):
	Connecting dialog_rule_changed on "changed" signal of
	actual rule.

2007-06-15  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #447727

	* e-info-label.c:
	* e-multi-config-dialog.c:
	* e-task-bar.c:
	Use ellipsized GtkLabels instead of EClippedLabels.

	* e-clipped-label.[ch]:
	Remove these files.  GTK+ provides this functionality now.

	* Makefile.am:
	Remove e-clipped-label.[ch].

2007-06-04  Chenthill Palanisamy  <pchenthill@novell.com>
